--- a/.github/ISSUE_TEMPLATE/01-start-bug.yml
+++ b/.github/ISSUE_TEMPLATE/01-start-bug.yml
@@ -1,5 +1,6 @@
 name: Bug Report
 description: Something isn't working as expected.
+title: "[Bug]"
 labels: ["triage", "bug"]
 assignees:
   - mitchell-merry
